# writer

./: CONTRIBUTING.md  README.md  meson.build
data/: com.github.ryonakano.writer.appdata.xml.in  com.github.ryonakano.writer.desktop.in  writer.appdata.xml.in  writer.desktop.in
po/: POTFILES  meson.build
po/extra/: POTFILES  meson.build
src/: Application.vala  MainWindow.vala  Writer.vala  meson.build
src/Utils/: Document.vala  FileChooser.vala  FileExporter.vala  Stylesheet.vala  TextEditor.vala  TextRange.vala  ZeitgeistLogger.vala
src/Widgets/: ButtonGroup.vala  EditorView.vala  ImageProperty.vala  ImageToolBar.vala  InsertChooser.vala  ShapeChooser.vala  ShapeProperty.vala  TableChooser.vala  TableProperty.vala  TableToolBar.vala  TextBoxProperty.vala  TextProperty.vala  TextToolBar.vala  TitleBar.vala  ToolBar.vala  WelcomeView.vala
